2006-11-02  Daniel Kobras  <kobras@debian.org>

	* coders/dcm.c: (ReadDCMImage) Prevent buffer overflow of
	'photometric' array in DCM coder. Original patch thanks to
	M Joonas Pihlaja. (CVE-2006-5456)
	* coders/palm.c: (ReadPALMImage) Fix heap overflows of 'one_row'
	array in PALM coder. Original patch thanks to M Joonas Pihlaja.
	(CVE-2006-5456)

2006-09-12  Daniel Kobras  <kobras@debian.org>

	* coders/sgi.c (ReadSGIImage): Use strncpy() instead of strlcpy() in
	1.1 branch.
	* coders/xcf.c (ReadBlobStringWithLongSize): Add new parameter 'max'
	to prevent overflowing the 'string' array. (CVE-2006-3743)
	(ReadOneLayer): Adjust callers of ReadBlobStringWithLongSize(), and
	guard against infinite loops on premature end-of-file.
	(ReadXCFImage): Adjust callers of ReadBlobStringWithLongSize(), and
	guard against infinite loops on premature end-of-file.

2006-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/sgi.c (ReadSGIImage): Mostly applied Debian patch for
	CVE-2006-4144 security issue related to RLE decoding.  Also added
	complete verification of file header.

2006-08-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): Fix compilation problem.  Patch
	submitted by Aron Stansvik.

2006-07-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (WriteJPEGImage): Clear the JPEG library
	structures in order to ensure a completely clean slate.

2006-06-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (ConvertImageCommand): Fix memory leaks which
	occured when an image was not returned.
	* magick/command.c (IdentifyImageCommand): Ditto.
	* magick/command.c (MogrifyImageCommand): Ditto.

2006-06-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c: Add mention of -resample to convert and
	mogrify usage messages.

2006-05-31  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	* configure.ac: Fix arguments to AC_CHECK_HEADER.

2006-05-11  JH  <jh@ops.everybox.com>
