@@ -2555,7 +2555,7 @@ MagickExport void CompositeUsage(void)
       "-colorspace type     alternate image colorspace",
       "-comment string      annotate image with comment",
       "-compose operator    composite operator",
-      "-compress type       image compression tyhpe",
+      "-compress type       image compression type",
       "-debug events        display copious debugging information",
       "-define values       Coder/decoder specific options",
       "-density geometry    horizontal and vertical density of the image",
@@ -4706,7 +4706,7 @@ MagickExport void ConvertUsage(void)
       "-colors value        preferred number of colors in the image",
       "-colorspace type     alternate image colorspace",
       "-comment string      annotate image with comment",
-      "-compress type       image compression tyhpe",
+      "-compress type       image compression type",
       "-contrast            enhance or reduce the image contrast",
       "-crop geometry       preferred size and location of the cropped image",
       "-cycle amount        cycle the image colormap",
@@ -5055,7 +5055,7 @@ MagickExport void DisplayUsage(void)
       "-colors value        preferred number of colors in the image",
       "-colorspace type     alternate image colorspace",
       "-comment string      annotate image with comment",
-      "-compress type       image compression tyhpe",
+      "-compress type       image compression type",
       "-contrast            enhance or reduce the image contrast",
       "-crop geometry       preferred size and location of the cropped image",
       "-debug events        display copious debugging information",
@@ -11639,7 +11639,7 @@ MagickExport void MogrifyUsage(void)
       "-colors value        preferred number of colors in the image",
       "-colorspace type     alternate image colorspace",
       "-comment string      annotate image with comment",
-      "-compress type       image compression tyhpe",
+      "-compress type       image compression type",
       "-contrast            enhance or reduce the image contrast",
       "-crop geometry       preferred size and location of the cropped image",
       "-cycle amount        cycle the image colormap",
@@ -13114,7 +13114,7 @@ MagickExport void MontageUsage(void)
       "-colorspace type     alternate image colorsapce",
       "-comment string      annotate image with comment",
       "-compose operator    composite operator",
-      "-compress type       image compression tyhpe",
+      "-compress type       image compression type",
       "-crop geometry       preferred size and location of the cropped image",
       "-debug events        display copious debugging information",
       "-define values       Coder/decoder specific options",
