@@ -1461,8 +1461,8 @@ std::string name_, const std::string value_</small></td>
 image attribute. Any number of named attributes may be attached to the
 image. For example, the image comment is a named image attribute with
 the name "comment". EXIF tags are attached to the image as named
-attributes. Use the syntax "[EXIF:&lt;tag&gt;]" to request an EXIF tag
-similar to "[EXIF:DateTime]".</small><br>
+attributes. Use the syntax "EXIF:&lt;tag&gt;" to request an EXIF tag
+similar to "EXIF:DateTime".</small><br>
       </td>
     </tr>
     <tr>
