@@ -1,3 +1,9 @@
+2006-11-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* www/Magick++/Image.html: Fix documentation regarding retrieving
+	EXIF attribute.
+	* magick/command.c: Fix typo in usage messages.
+
 2006-11-02  Daniel Kobras  <kobras@debian.org>
 
 	* coders/dcm.c: (ReadDCMImage) Prevent buffer overflow of
